# UsEquitySnapshotPipelines

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  qsl.toml
.github/: codex_auto_merge_policy.json
.github/scripts/: verify_main_ci_success.sh
.github/workflows/: ai_review.yml  auto_merge_codex_pr.yml  ci.yml  codex_pr_feedback.yml  codex_review_gate.yml  dependabot_auto_merge.yml  monthly_review.yml  publish-snapshot-artifacts.yml  publish-strategy-plugins.yml  run-russell-live-ledger.yml  snapshot-artifact-health.yml  update-source-input-data.yml
docs/: artifact_contract.md  crisis-context-research-v2.md  crisis-response-ai-replay.md  crisis-response-live-promotion-spec.md  crisis-response-research-roadmap.md  crisis-response-v1.md  dynamic-mega-leveraged-pullback-risk-budget-research.md  global-etf-offensive-rotation-research.md  global-etf-rotation-snapshot-management.md  index-leaps-growth-overlay-research.md  intraday-crash-circuit-breaker-research-20260609.md  leveraged-strategy-candidate-research.md  live-strategy-health-report.md  live-strategy-optimization-feedback-20260603.md  live-strategy-research-expansion-20260620.md  mega-cap-leader-rotation-dynamic-validation.md  memory-semiconductor-momentum-research.md  migration_inventory.md  offensive-live-strategy-research-roadmap.md  operator_runbook.md  operator_runbook.zh-CN.md  snapshot-ai-audit-automation.md  soxl-soxx-chandelier-stop-research.md  tech-communication-pullback-backtest-20260603.md  tecl-xlk-optimization-research.md  tecl-xlk-optimization-research.zh-CN.md  tqqq-soxl-optimization-research.md  tqqq-volatility-delever-review-20260613.md  us-equity-strategy-candidate-research.md
docs/examples/: strategy_plugins.example.toml
schemas/: soxl_tqqq_research_evidence.v1.schema.json
scripts/: backtest_crisis_regime_guard.py  backtest_crisis_response.py  backtest_dynamic_mega_leveraged_pullback_matrix.py  backtest_global_etf_offensive_rotation.py  backtest_leveraged_strategy_candidates.py  backtest_mag7_leveraged_pullback.py  backtest_mega_cap_leader_rotation.py  backtest_mega_cap_leader_rotation_robustness.py  backtest_russell_1000_multi_factor_defensive.py  backtest_taco_panic_rebound.py  backtest_taco_panic_rebound_overlay_compare.py  backtest_taco_panic_rebound_portfolio.py  backtest_tech_communication_pullback.py  backtest_us_equity_strategy_candidates.py  build_crisis_context_pack.py  build_crisis_response_shadow_signal.py  build_dynamic_mega_leveraged_pullback_snapshot.py  build_global_etf_rotation_shadow_review.py  build_global_etf_rotation_shadow_review_input.py  build_global_etf_rotation_snapshot.py  build_mega_cap_leader_rotation_aggressive_snapshot.py  build_mega_cap_leader_rotation_dynamic_top20_snapshot.py  build_mega_cap_leader_rotation_shadow_review.py  build_mega_cap_leader_rotation_top50_balanced_snapshot.py  build_monthly_global_etf_promotion_bundles.py  build_monthly_live_decay_monitors.py  build_monthly_live_replacement_reviews.py  build_monthly_live_strategy_health_reports.py  build_monthly_plugin_promotion_reviews.py  build_monthly_russell_crash_brake_research.py  build_monthly_russell_crash_brake_review_chain.py  build_new_r1000_residual_strength_20_snapshot.py  build_promotion_readiness_report.py  build_russell_1000_feature_snapshot.py  build_russell_top50_leader_rotation_aggressive_snapshot.py  build_russell_top50_leader_rotation_snapshot.py  build_scheduled_ibit_dca_research.py  build_snapshot_live_decay_followup.py  build_snapshot_promotion_bundle.py  build_snapshot_shadow_review.py  (+44 more)
src/us_equity_snapshot_pipelines/: __init__.py  ai_rule_proposal.py  artifacts.py  backtest_windows.py  contracts.py  crisis_context_research.py  crisis_regime_guard_research.py  crisis_response_ai_replay.py  crisis_response_research.py  crisis_response_shadow_plugin.py  dynamic_mega_leveraged_pullback.py  dynamic_mega_universe.py  evidence.py  global_etf_offensive_rotation_research.py  global_etf_oos_window_diagnostics.py  global_etf_promotion_bundle.py  global_etf_rotation_shadow_cycle.py  global_etf_rotation_shadow_review.py  global_etf_rotation_shadow_review_input.py  global_etf_rotation_snapshot.py  global_etf_rotation_universe_sensitivity.py  ibit_smart_dca_research.py  ibit_zscore_exit_plugin.py  input_sources.py  intraday_crash_circuit_breaker_research.py  intraday_scheme_research.py  intraday_scheme_validation.py  leaps_growth_overlay_research.py  leveraged_strategy_candidates.py  live_decay_monitor.py  (+70 more)
tests/: test_ai_rule_proposal.py  test_backtest_windows.py  test_build_monthly_global_etf_promotion_bundles.py  test_build_monthly_live_decay_monitors.py  test_build_monthly_live_replacement_reviews.py  test_build_monthly_live_strategy_health_reports.py  test_build_monthly_plugin_promotion_reviews.py  test_build_monthly_russell_crash_brake_research.py  test_build_monthly_russell_crash_brake_review_chain.py  test_build_scheduled_ibit_dca_research.py  test_check_codex_auto_merge_readiness.py  test_codex_remediation_issue.py  test_contracts.py  test_crash_brake_monthly_review_smoke.py  test_crisis_context_research.py  test_crisis_response_ai_replay.py  test_crisis_response_shadow_plugin.py  test_cross_repo_contracts.py  test_dependency_lock_consistency.py  test_dynamic_mega_leveraged_pullback.py  test_evaluate_codex_pr_merge.py  test_gate_codex_app_review.py  test_global_etf_offensive_rotation_research.py  test_global_etf_oos_window_diagnostics.py  test_global_etf_promotion_bundle.py  test_global_etf_rotation_research_entrypoints.py  test_global_etf_rotation_shadow_cycle.py  test_global_etf_rotation_shadow_review.py  test_global_etf_rotation_shadow_review_input.py  test_global_etf_rotation_snapshot.py  test_global_etf_rotation_universe_sensitivity.py  test_ibit_smart_dca_research.py  test_ibit_zscore_metrics_download.py  test_input_sources.py  test_intraday_crash_circuit_breaker_research.py  test_leaps_growth_overlay_research.py  test_leveraged_strategy_candidates.py  test_live_decay_monitor.py  test_live_replacement_review.py  test_live_strategy_health.py  (+82 more)
(+31 files in other folders)
