[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-equity-snapshot-pipelines"
version = "0.1.0"
description = "Upstream feature-snapshot and release pipelines for US equity strategies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "yfinance>=0.2.40",
  "us-equity-strategies @ git+https://github.com/QuantStrategyLab/UsEquityStrategies.git@v0.7.24",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
useq-build-tech-communication-pullback-snapshot = "us_equity_snapshot_pipelines.tech_communication_pullback:main"
useq-build-russell-1000-snapshot = "us_equity_snapshot_pipelines.russell_1000_multi_factor_defensive:main"
useq-build-mega-cap-leader-rotation-top50-balanced-snapshot = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_top50_balanced:main"
useq-backtest-mega-cap-leader-rotation = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_backtest:main"
useq-backtest-mega-cap-leader-rotation-robustness = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_robustness:main"
useq-validate-mega-cap-leader-rotation-dynamic-universe = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_dynamic_validation:main"
useq-research-mega-cap-leader-rotation-concentration-variants = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_concentration_variants:main"
useq-research-mega-cap-leader-rotation-frequency-risk = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_frequency_risk_research:main"
useq-research-russell-1000-proxy-long-history = "us_equity_snapshot_pipelines.russell_1000_proxy_long_history:main"
useq-backtest-mag7-leveraged-pullback = "us_equity_snapshot_pipelines.mag7_leveraged_pullback_backtest:main"
useq-research-taco-panic-rebound = "us_equity_snapshot_pipelines.taco_panic_rebound_research:main"
useq-backtest-taco-panic-rebound-portfolio = "us_equity_snapshot_pipelines.taco_panic_rebound_backtest:main"
useq-backtest-taco-panic-rebound-overlay-compare = "us_equity_snapshot_pipelines.taco_panic_rebound_overlay_compare:main"
useq-backtest-crisis-regime-guard = "us_equity_snapshot_pipelines.crisis_regime_guard_research:main"
useq-backtest-crisis-response = "us_equity_snapshot_pipelines.crisis_response_research:main"
useq-build-crisis-context-pack = "us_equity_snapshot_pipelines.crisis_context_research:main"
useq-build-crisis-response-shadow-signal = "us_equity_snapshot_pipelines.crisis_response_shadow_plugin:main"
useq-build-taco-rebound-shadow-signal = "us_equity_snapshot_pipelines.taco_rebound_shadow_plugin:main"
useq-run-strategy-plugins = "us_equity_snapshot_pipelines.strategy_plugin_runner:main"
useq-publish-snapshot-artifacts = "us_equity_snapshot_pipelines.publish:main"
useq-update-russell-1000-input-data = "us_equity_snapshot_pipelines.russell_1000_inputs:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
