[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-equity-snapshot-pipelines"
version = "0.1.4"
description = "Upstream feature-snapshot and release pipelines for US equity strategies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "google-cloud-storage>=2.18",
  "requests[socks]>=2.31",
  "yfinance>=0.2.40",
  "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@b821e8c318e15d40f925c84a007ae335a3415cd5",
  "quant-strategy-plugins @ git+https://github.com/QuantStrategyLab/QuantStrategyPlugins.git@eedaa71de8472448c4665b8b7b3be679fe7db83d",
  "us-equity-strategies @ git+https://github.com/QuantStrategyLab/UsEquityStrategies.git@7ae083fae5c00c3df0c8fb1d98b045401a3b5bfa",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
useq-build-tech-communication-pullback-snapshot = "us_equity_snapshot_pipelines.tech_communication_pullback:main"
useq-backtest-tech-communication-pullback = "us_equity_snapshot_pipelines.tech_communication_pullback_backtest:main"
useq-build-russell-top50-leader-rotation-snapshot = "us_equity_snapshot_pipelines.russell_top50_leader_rotation:main"
useq-build-russell-top50-shadow-review = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_shadow_review:main"
useq-build-russell-top50-shadow-live-ledger = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_shadow_live_ledger:main"
useq-research-russell-top50-leader-rotation-capacity-stress = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_capacity_stress:main"
useq-backtest-russell-top50-leader-rotation = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_backtest:main"
useq-backtest-russell-top50-leader-rotation-robustness = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_robustness:main"
useq-validate-russell-top50-leader-rotation-dynamic-universe = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_dynamic_validation:main"
useq-research-russell-top50-leader-rotation-concentration-variants = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_concentration_variants:main"
useq-research-russell-top50-leader-rotation-frequency-risk = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_frequency_risk_research:main"
useq-research-russell-top50-leader-rotation-live-readiness = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_live_readiness:main"
useq-research-russell-top50-leader-rotation-stress-readiness = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_stress_readiness:main"
useq-research-russell-top50-leader-rotation-crash-brake = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_crash_brake_research:main"
useq-research-russell-top50-leader-rotation-overfit-diagnostics = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_overfit_diagnostics:main"
useq-research-russell-top50-leader-rotation-reality-check = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_reality_check:main"
useq-research-russell-top50-leader-rotation-liquidity-diagnostics = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_liquidity_diagnostics:main"
useq-research-russell-top50-leader-rotation-spa-check = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_spa_check:main"
useq-research-russell-top50-leader-rotation-era-split = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_era_split_diagnostics:main"
useq-research-russell-top50-leader-rotation-mcs-diagnostics = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_mcs_diagnostics:main"
useq-research-russell-top50-leader-rotation-dsr-pbo = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_dsr_pbo_diagnostics:main"
useq-research-russell-top50-leader-rotation-promotion-review = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_promotion_review:main"
useq-research-russell-top50-leader-rotation-promotion-bundle = "us_equity_snapshot_pipelines.mega_cap_leader_rotation_promotion_bundle:main"
useq-research-russell-1000-proxy-long-history = "us_equity_snapshot_pipelines.russell_1000_proxy_long_history:main"
useq-research-index-leaps-growth-overlay = "us_equity_snapshot_pipelines.leaps_growth_overlay_research:main"
useq-backtest-mag7-leveraged-pullback = "us_equity_snapshot_pipelines.mag7_leveraged_pullback_backtest:main"
useq-backtest-soxl-soxx-trend-income = "us_equity_snapshot_pipelines.soxl_soxx_trend_income_backtest:main"
useq-archive-soxl-soxx-trend-income = "us_equity_snapshot_pipelines.soxl_soxx_trend_income_archive:main"
useq-archive-tqqq-growth-income = "us_equity_snapshot_pipelines.tqqq_growth_income_archive:main"
useq-research-taco-panic-rebound = "us_equity_snapshot_pipelines.taco_panic_rebound_research:main"
useq-backtest-taco-panic-rebound-portfolio = "us_equity_snapshot_pipelines.taco_panic_rebound_backtest:main"
useq-backtest-taco-panic-rebound-overlay-compare = "us_equity_snapshot_pipelines.taco_panic_rebound_overlay_compare:main"
useq-backtest-crisis-regime-guard = "us_equity_snapshot_pipelines.crisis_regime_guard_research:main"
useq-backtest-crisis-response = "us_equity_snapshot_pipelines.crisis_response_research:main"
useq-backtest-global-etf-universe-sensitivity = "us_equity_snapshot_pipelines.global_etf_rotation_universe_sensitivity:main"
useq-backtest-global-etf-offensive-rotation = "us_equity_snapshot_pipelines.global_etf_offensive_rotation_research:main"
useq-build-global-etf-rotation-snapshot = "us_equity_snapshot_pipelines.global_etf_rotation_snapshot:main"
useq-research-memory-semiconductor-momentum = "us_equity_snapshot_pipelines.memory_semiconductor_momentum_research:main"
useq-build-live-strategy-health-report = "us_equity_snapshot_pipelines.live_strategy_health:main"
useq-build-live-decay-monitor = "us_equity_snapshot_pipelines.live_decay_monitor:main"
useq-research-ibit-smart-dca = "us_equity_snapshot_pipelines.ibit_smart_dca_research:main"
useq-build-crisis-context-pack = "us_equity_snapshot_pipelines.crisis_context_research:main"
useq-build-crisis-response-shadow-signal = "us_equity_snapshot_pipelines.crisis_response_shadow_plugin:main"
useq-build-taco-rebound-shadow-signal = "us_equity_snapshot_pipelines.taco_rebound_shadow_plugin:main"
useq-run-strategy-plugins = "us_equity_snapshot_pipelines.strategy_plugin_runner:main"
useq-backtest-us-equity-strategy-candidates = "us_equity_snapshot_pipelines.us_equity_strategy_candidates:main"
useq-backtest-leveraged-strategy-candidates = "us_equity_snapshot_pipelines.leveraged_strategy_candidates:main"
useq-publish-snapshot-artifacts = "us_equity_snapshot_pipelines.publish:main"
useq-update-russell-1000-input-data = "us_equity_snapshot_pipelines.russell_1000_inputs:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
